Final commit before CHRISTMAS! Better Sakai stuff, and logging, and a few other bits.

--- a/trunk/mobile_portal/mobile_portal/site-media/css/groups/smart.css
+++ b/trunk/mobile_portal/mobile_portal/site-media/css/groups/smart.css
@@ -76,6 +76,7 @@ li#menu-z3950 {background-image:url('../../png/index-icons/z3950.png');}
 li#menu-weather {background-image:url('../../png/index-icons/weather.png');}
 li#menu-sakai {background-image:url('../../png/index-icons/sakai.png');}
 li#menu-oucs_status {background-image:url('../../png/index-icons/oucs_status.png');}
+li#menu-oucs_status {background-image:url('../../png/index-icons/oucs_status.png');}
 /* End Index Page Specific */
 
 
@@ -144,6 +145,7 @@ div#bc-title h1.z3950-header {    background-image:url('../../png/index-icons/z3
 div#bc-title h1.rss-header {      background-image:url('../../png/index-icons/rss-bc.png');}
 div#bc-title h1.weather-header {  background-image:url('../../png/index-icons/weather-bc.png');}
 div#bc-title h1.oucs_status-header {  background-image:url('../../png/index-icons/oucs_status-bc.png');}
+div#bc-title h1.sakai-header {  background-image:url('../../png/index-icons/sakai-bc.png');}
 /* End Breadcrumb Trail Styles */
 
 
