Now tells search engines not to index nearby entity pages. We check for an entity passed in to the template, adding a robots=noindex meta tag if so.

--- a/trunk/mobile_portal/mobile_portal/templates/maps/nearby_list.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/nearby_list.xhtml
@@ -2,6 +2,9 @@
 
 {% block title %}m.ox | Maps - near{% if entity %} {{ entity.title }}{% else %}by{% endif %}{% endblock %}
 
+{% block extrahead %}{{ block.super }}{% if entity %}
+<meta name="robots" content="noindex" />{% endif %}{% endblock %}
+
 {% block content %}
 
 <div class="section">
