--- a/trunk/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
@@ -3,6 +3,9 @@
 
 {% block title %}m.ox | {{ entity_types.0.verbose_name_plural|capfirst }} near{% if entity %} {{ entity.title }}{% else %}by{% endif %}{% endblock %}
 
+{% block extrahead %}{{ block.super }}{% if entity %}
+<meta name="robots" content="noindex" />{% endif %}{% endblock %}
+
 {% block content %}
 
 <div class="section">
