Push fix to remove debug info from home page.

--- a/tags/0.2/mobile_portal/mobile_portal/templates/core/index.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/core/index.xhtml
@@ -64,7 +64,7 @@
         {% endifequal %}
     </div>
 
-{% if 1 %}
+{% if user.is_superuser %}
         <hr/>
         <div class="section">
             <h2>Session</h2>
