--- a/tags/0.2/mobile_portal/mobile_portal/templates/core/index.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/core/index.xhtml
@@ -44,6 +44,10 @@
     </div>
     </div>
     
+    <div class="bubble"><div class="center pad-10">
+      {% oxford_date_today %}
+    </div></div>
+    
     <ul class="stand-alone">
             <li class="round-top"><a href="{% url core_static_about %}">About this site</a></li>
 			{% if has_user_messages %}
@@ -56,7 +60,7 @@
         {% ifequal style_group "dumb" %}
             Produced by Oxford University Computing Services <br /><a href="http://www.oucs.ox.ac.uk">www.oucs.ox.ac.uk</a>
         {% else %}
-    <div class="bubble" style="padding:8px;">
+    <div class="content" style="margin:8px;">
     
         <img src="{{ MEDIA_URL }}png/oucs-logo-small.png" alt="Oxford University Computing Services"/>
         <img src="{{ MEDIA_URL }}gif/brandmark.gif" alt="University of Oxford" />
