More improvements to Sakai stuff.

--- a/trunk/mobile_portal/mobile_portal/templates/sakai/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/sakai/index.xhtml
@@ -6,6 +6,8 @@
 
 <ul>
   <li><a href="{% url sakai_signup %}">Tutorial sign-ups</a></li>
+  <li><a href="{% url sakai_poll %}">Polls</a></li>
+  <li><a href="{% url sakai_direct %}">User information</a></li>
 </ul>
 
 {% endblock %} 
