--- a/trunk/mobile_portal/mobile_portal/templates/secure/base.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/secure/base.xhtml
@@ -1,2 +1,7 @@
 {% extends "base.xhtml" %}
 
+{% block bottom_links %}{{ block.super }}<br/>
+  <a href="{% url secure_index %}">Security preferences</a><br/>
+  <a href="{% url secure_index %}">Clear secure session</a>
+{% endblock %}
+    
