--- a/trunk/mobile_portal/mobile_portal/templates/secure/timed_out.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/secure/timed_out.xhtml
@@ -8,13 +8,11 @@
   <div class="note"><div class="bubble">
     <p>
       As a security feature your session has timed out due to a period of
-      inactivity. By default this is fifteen minutes, but you may have set
-      it to something different.
+      inactivity. 
     </p>
 {% if has_pin %}
     <p>
-      As you have previously set a PIN you may enter it now to re-enable your
-      session:
+      You can get back in by entering your PIN:
     </p>
     <p>
       <form method="post" action=".">
@@ -26,19 +24,15 @@
       </form>
     </p>
     <p>
-      If you are unable to remember your PIN, you may reset your session by
-      using the button below. Please note that all preferences will be lost,
-      requiring you reauthenticate to any services you were previously using.
+      If you can't remember your PIN, you may reset your session by
+      using the button below. Note, that you may lose some secure preferences!
     </p>
 {% else %}
-    <p>
-      In this instance there is no way to re-enable your session, however in
-      future you may set a PIN for this purpose.
-    </p>
     <p>
       The button below will clear your secure session, allowing you to
       reauthenticate with any services you were previously using.
     </p>
+    <p>Tip: Make it easier to get back in by setting a PIN!</p>
 {% endif %}
     <p>
       <form method="post" action=".">
