More fixes for Sakai integration.

--- a/trunk/mobile_portal/mobile_portal/templates/sakai/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/sakai/index.xhtml
@@ -9,9 +9,9 @@
      Here you'll see a gradually increasing list of tools you can use from Weblearn.     
     </div></div>
 <ul>
-  <li class="round-bottom"><a href="{% url sakai_signup %}">Tutorial sign-ups</a></li>
+  <li><a href="{% url sakai_signup %}">Tutorial sign-ups</a></li>
   <li><a href="{% url sakai_poll %}">Polls</a></li>
-  <li><a href="{% url sakai_direct %}">User information</a></li>
+  <li class="round-bottom"><a href="{% url sakai_direct %}">User information</a></li>
 </ul>
 </div>
 {% endblock %} 
