--- a/trunk/mobile_portal/mobile_portal/templates/rss/item_list.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/rss/item_list.xhtml
@@ -16,7 +16,7 @@
     <h2>{{ feed.title }}</h2>
     
     <ul>
-{% for item in feed.rssitem_set.all %}
+{% for item in feed.item_set.all %}
         <li {% if forloop.last %}class="round-bottom"{% endif %}>
             <a href="{{ item.get_absolute_url }}">
                 {{ item.title }}<br />
