Further tweaks to our Sakai integration, including the starts of a poll app.

--- a/trunk/mobile_portal/mobile_portal/templates/sakai/direct.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/sakai/direct.xhtml
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+
+
 <div class="section">
   <div class="content pad-10">
     <dl>
@@ -15,5 +17,6 @@
   </div>
 </div>
       
+{{ user_details }}
 
 {% endblock %}
