UNSTABLE/BROKEN commit so I can work without lag.

--- a/trunk/mobile_portal/mobile_portal/templates/secure/oauth_error.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/secure/oauth_error.xhtml
@@ -4,7 +4,7 @@
 
 <div class="section">
   <h2>There was an error</h2>
-  
+  A{{ oauth_problem }}A
   <div class="note"><div class="bubble pad-10">
 {% ifequal error "oauth_problem" %}
   {% ifequal oauth_problem "permission_denied" %}
