--- a/trunk/mobile_portal/mobile_portal/templates/core/exposition/features.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/exposition/features.xhtml
@@ -124,12 +124,12 @@
 
 <div class="feature-list">
   <ul>
-    <li><a href="#features-contact">Contact search</a></li>
-    <li><a href="#features-maps">Maps</a></li>
-    <li><a href="#features-z3950">Library search</a></li>
-    <li><a href="#features-podcasts">Podcasts</a></li>
-    <li><a href="#features-search">Search</a></li>
-    <li><a href="#features-other">Other features</a></li>
+    <li><a id="show-feature-contact" href="#features-contact">Contact search</a></li>
+    <li><a id="show-feature-maps" href="#features-maps">Maps</a></li>
+    <li><a id="show-feature-z3950" href="#features-z3950">Library search</a></li>
+    <li><a id="show-feature-podcasts" href="#features-podcasts">Podcasts</a></li>
+    <li><a id="show-feature-search" href="#features-search">Search</a></li>
+    <li><a id="show-feature-other" href="#features-other">Other features</a></li>
   </ul>
 </div>
 
