--- a/trunk/mobile_portal/mobile_portal/templates/core/exposition/container.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/exposition/container.xhtml
@@ -30,6 +30,72 @@
           });
       };
     </script>
+    <style type="text/css">
+      div.navigation {
+        text-align:center;
+        position:absolute;
+        bottom:0;
+      }
+      
+      div.navigation ul {
+        list-style: none;
+        margin:15px 0;
+        padding:0;
+        position:relative;
+        left:-10px;
+      }
+      
+      div.navigation li {
+        display:inline;
+        
+      }
+      
+      div.navigation a {
+        padding:10px 10px;
+        font-size:12pt;
+        color:#ffffff;
+        text-shadow: #000000 1px 1px 2px;
+      }
+
+      div.navigation a:hover {
+        color: #002147;
+        text-shadow: none;
+        text-shadow: #ffffff 0px 0px 5px;
+      }
+      
+      div#spinner {
+        display:none;
+        position:relative;
+        top:20px;
+        width:100%;
+        text-align:center;
+      }
+    </style>
+    <script type="text/javascript">
+      $(function() {
+        $('.navigation a').each(function() {
+          e = $(this);
+          e.bind('click', function() {
+            $('#content').html('');
+            $('#spinner').show();
+            url = $(this).attr('href');
+            $.ajax({
+              url: url,
+              data: 'ajax=true',
+              success: function(data) {
+            	$('#spinner').hide();
+                $('#content').html(data);
+                window.location.hash = url;
+              },
+            });
+            return false;
+            
+          });
+        });
+      });
+                  
+          
+    </script>
 {% endblock %}
   </head>
 
@@ -43,15 +109,7 @@
         <h1>
           <img src="{{ MEDIA_URL }}png/desktop-logo.png" alt="Mobile Oxford" height="62" width="445"/>
         </h1>
-        <div class="strapline">
-          m.ox.ac.uk
-        </div>
       </div>
-      <a href="http://www.ox.ac.uk/">
-        <img class="brandmark" src="{{ MEDIA_URL }}gif/brandmarks/2231_ox_brand1_rev.gif" alt="University of Oxford" height="115" width="115" />
-      </a>
-    </div>
-    </div>
     <div class="navigation">
       <ul>
         <li><a href="{% url core_exposition "" %}">About</a></li>
@@ -62,8 +120,16 @@
         <li><a href="{% url core_exposition "" %}help/">Help</a></li>
       </ul>
     </div>
+      <a href="http://www.ox.ac.uk/">
+        <img class="brandmark" src="{{ MEDIA_URL }}gif/brandmarks/2231_ox_brand1_rev.gif" alt="University of Oxford" height="115" width="115" />
+      </a>
+    </div>
+    </div>
+    <div id="spinner">
+      <img src="{{ MEDIA_URL }}gif/ajax-loader.gif" height="32" width="32"/>
+    </div>
         
-    <div class="container">
+    <div class="container" id="content">
       {{ content|safe }}
     </div>
 {% endblock %}
