--- a/trunk/mobile_portal/mobile_portal/site-media/css/desktop_about.css
+++ b/trunk/mobile_portal/mobile_portal/site-media/css/desktop_about.css
@@ -11,6 +11,7 @@ body {
 	font-weight:normal;
 	line-height:1.33;
 	overflow:scroll;
+	background: #dce2f4 url(../png/desktop/backdrop.png) repeat-x scroll center top ;
 }
 
 a {
@@ -32,11 +33,9 @@ div.header {
     position:relative;
 /*    background-color:#c5d2e0;*/
     height:145px;
-    border-bottom:1px solid #002147;
 }
 
 div.header {
-	background: #ffffff url(../png/desktop/backdrop.png) repeat-x scroll center top ;
 	margin-bottom:20px;
     
 }
@@ -69,6 +68,15 @@ div.strapline {
     padding:5px 0px 0px 0px;
    /* color:#002147;*/
 	color:#FFF;
+}
+
+div#content {
+    background-color:#ffffff;
+    padding:15px;
+    border-radius:10px;
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+    -khtml-border-radius:10px;
 }
 
 div.features, div.preview, div.access, div.data-usage, div.about {
