--- a/trunk/mobile_portal/mobile_portal/templates/core/exposition/container.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/exposition/container.xhtml
@@ -13,23 +13,6 @@
         <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
 	<script src="{{ MEDIA_URL }}js/jquery-1.3.2.js" type="text/javascript"> </script>    
-    <script type="text/javascript">
-      function preview() {
-          var popup = window.open(
-              '?preview=true',
-              'popwin',
-              'left=20,top=20,innerwidth=330,innerheight=480,toolbar=1,menubar=0,location=0,status=1,resizable=1,scrollbars=yes'
-          );
-          popup.window.location.href = "{% url core_index %}" + "?preview=true";
-      }
-      
-      function loaded() {
-          $('#preview-link').bind('click', function(event) {
-              preview();
-              return false;
-          });
-      };
-    </script>
     <style type="text/css">
       div.navigation {
         text-align:center;
@@ -51,10 +34,16 @@
       }
       
       div.navigation a {
-        padding:10px 10px;
+        padding:5px 8px;
+        margin:5px 2px;
         font-size:12pt;
         color:#ffffff;
         text-shadow: #000000 1px 1px 2px;
+      }
+      
+      div.navigation li.selected a {
+        border-bottom:1px solid #ffffff;
+        border-top:1px solid #ffffff;
       }
 
       div.navigation a:hover {
@@ -68,26 +57,78 @@
         position:relative;
         top:20px;
         width:100%;
+        left:auto;
+        right:auto;
         text-align:center;
+      }
+      
+      div#spinner span {
+        display:block;
+        padding:20px;
+        -moz-border-radius:20px;
+        -webkit-border-radius:20px;
+        -khtml-border-radius:20px;
+        background-color:#ffffff;
+        height:32px;
+        width:32px;
+        margin-left:auto;
+        margin-right:auto;
+      }
+      
+      
+      h2 {
+        display: none;
       }
     </style>
     <script type="text/javascript">
+      pages = ["about", "features", "accessing", "get-involved", "blog", "help"];
+      page = window.location.hash.substring(1, {{ page|length|add:"1" }});
+      if (page != "{{ page }}") {
+        url = "{% url core_exposition %}";
+        for (i in pages) {
+          page = pages[i];
+          if (window.location.hash.substring(1, page.length+1) != page)
+            continue;
+          if (page != "about")
+            url += page + "/";
+          window.location = url + window.location.hash;
+        }
+      }
+          
+      function preview() {
+          var popup = window.open(
+              '?preview=true',
+              'popwin',
+              'left=20,top=20,innerwidth=330,innerheight=480,toolbar=1,menubar=0,location=0,status=1,resizable=1,scrollbars=yes'
+          );
+          popup.window.location.href = "{% url core_index %}" + "?preview=true";
+      }
+      
       $(function() {
+        $('#preview-link').bind('click', function(event) {
+          preview();
+          return false;
+        });
+          
         $('.navigation a').each(function() {
           e = $(this);
           e.bind('click', function() {
-            $('#content').html('');
+            $('#container').html('');
             $('#spinner').show();
             url = $(this).attr('href');
+            e = $(this);
             $.ajax({
               url: url,
               data: 'ajax=true',
               success: function(data) {
             	$('#spinner').hide();
-                $('#content').html(data);
-                window.location.hash = url;
+                $('#container').html(data);
+                window.location.hash = '#'+e.attr('id').substring(5);
               },
             });
+            $('.navigation li').removeClass('selected');
+            e.parent().addClass('selected');
+            e.blur();
             return false;
             
           });
@@ -101,7 +142,7 @@
 
   
 
-  <body onload="javascript:loaded();">
+  <body>
 {% block body %}
     <div class="header">
     <div class="container" style="height:145px;">
@@ -112,12 +153,12 @@
       </div>
     <div class="navigation">
       <ul>
-        <li><a href="{% url core_exposition "" %}">About</a></li>
-        <li><a href="{% url core_exposition "" %}features/">Features</a></li>
-        <li><a href="{% url core_exposition "" %}accessing/">Accessing</a></li>
-        <li><a href="{% url core_exposition "" %}get-involved/">Get involved</a></li>
-        <li><a href="{% url core_exposition "" %}blog/">Blog</a></li>
-        <li><a href="{% url core_exposition "" %}help/">Help</a></li>
+        <li{% ifequal page "about" %} class="selected"{% endifequal %}><a id="link-about" href="{% url core_exposition "" %}">About</a></li>
+        <li{% ifequal page "features" %} class="selected"{% endifequal %}><a id="link-features" href="{% url core_exposition "" %}features/">Features</a></li>
+        <li{% ifequal page "accessing" %} class="selected"{% endifequal %}><a id="link-accessing" href="{% url core_exposition "" %}accessing/">Accessing</a></li>
+        <li{% ifequal page "get-involved" %} class="selected"{% endifequal %}><a id="link-get-involved" href="{% url core_exposition "" %}get-involved/">Get involved</a></li>
+        <li{% ifequal page "blog" %} class="selected"{% endifequal %}><a id="link-blog" href="{% url core_exposition "" %}blog/">Blog</a></li>
+        <li{% ifequal page "help" %} class="selected"{% endifequal %}><a id="link-help" href="{% url core_exposition "" %}help/">Help</a></li>
       </ul>
     </div>
       <a href="http://www.ox.ac.uk/">
@@ -126,11 +167,13 @@
     </div>
     </div>
     <div id="spinner">
-      <img src="{{ MEDIA_URL }}gif/ajax-loader.gif" height="32" width="32"/>
+      <span>
+        <img src="{{ MEDIA_URL }}gif/ajax-loader.gif" height="32" width="32"/>
+      </span>
     </div>
         
-    <div class="container" id="content">
-      {{ content|safe }}
+    <div class="container" id="container">
+        {{ content|safe }}
     </div>
 {% endblock %}
   </body>
