--- a/trunk/mobile_portal/mobile_portal/site-media/css/desktop_about.css
+++ b/trunk/mobile_portal/mobile_portal/site-media/css/desktop_about.css
@@ -53,7 +53,7 @@ div.header-strapline {
 }
 
 div.header-strapline h1 {
-    margin:0;
+    margin:0 0 0 10px;
 }
 
 div.header img.brandmark {
@@ -92,8 +92,6 @@ div.features, div.preview, div.access, div.data-usage, div.about {
 }
 
 div.about {
-    margin: 15px;
-    margin-bottom:0;
 }
 
 div.features h2, div.preview h2, div.access h2, div.data-usage h2 {
@@ -102,7 +100,6 @@ div.features h2, div.preview h2, div.access h2, div.data-usage h2 {
 
 div.column-left {
     float:left;
-    margin-left:15px;
     margin-top:15px;
 }
 
@@ -196,4 +193,87 @@ div.logos {
     margin-bottom:30px;
 }
 
+/* Features */
 
+  .feature-list {
+    float:right;
+    width:160px;
+  }
+  
+  .feature-list ul {
+    list-style:none;
+    margin:0;
+    padding-left:0;
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+  }
+  
+  .feature-list li {
+    border-left:1px solid #002147;
+    border-right:1px solid #002147;
+    margin:0;
+  }
+  
+  .feature-list li a {
+    color:#002147;
+    border-top:1px solid #002147;
+  }
+  
+  .feature-list li:hover {
+    color:#ffffff;
+    background-color:#002147;
+  }
+  
+  .feature-list li:hover a {
+    color:#ffffff;
+  }
+  
+  .feature-list li:first-child {
+    border-top:1px solid #002147;
+    -moz-border-radius-topleft:10px;
+    -webkit-border-topleft-radius:10px;
+    -moz-border-radius-topright:10px;
+    -webkit-border-topright-radius:10px;
+  }
+  
+  .feature-list li:first-child a {
+    border-top:0;
+  }
+  
+  .feature-list li:last-child {
+    border-bottom:1px solid #002147;
+    -moz-border-radius-bottomleft:10px;
+    -webkit-border-bottomleft-radius:10px;
+    -moz-border-radius-bottomright:10px;
+    -webkit-border-bottomright-radius:10px;
+  }
+  
+  .feature-list a {
+    display:block;
+    padding:10px 4px;
+  }
+  
+  .feature-info {
+    float:right;
+    width: 269px;
+    height: 417px;
+    padding: 5px 10px 0 10px;
+    -moz-border-radius-bottomright:10px;
+    
+  }
+  
+  .feature-info h3 {
+    margin-top:0;
+  }
+  
+  #feature-descriptions {
+    width:610px;
+    height:432px;
+    float:left;
+    position:relative;
+    overflow:hidden;
+  }
+  
+  video {
+    -moz-border-radius:15px;
+  }
